objects/Vesselschedule__c/Vesselschedule__c.object-meta.xml
<CustomObject>
    <label>Vessel schedule</label>
    <nameField>
        <displayFormat>VS-{00000}</displayFormat>
        <label>Vessel schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vessel schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>