objects/Vesselschedule__c/fields/A_C_Type__c.field-meta.xml
<CustomField>
    <fullName>A_C_Type__c</fullName>
    <label>A/C Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>