objects/Vesselschedule__c/fields/Air_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Air_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name / Air Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vessel schedules (Air Supplier)</relationshipLabel>
    <relationshipName>Vessel_schedules2</relationshipName>
    <type>Lookup</type>
</CustomField>