objects/Vesselschedule__c/fields/Arrive__c.field-meta.xml
<CustomField>
    <fullName>Arrive__c</fullName>
    <label>Arrive</label>
    <type>Time</type>
</CustomField>