objects/Vesselschedule__c/fields/Cargo_unit__c.field-meta.xml
<CustomField>
    <fullName>Cargo_unit__c</fullName>
    <label>Cargo unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barrel</fullName>
            </value>
            <value>
                <fullName>Budle</fullName>
            </value>
            <value>
                <fullName>Bag</fullName>
            </value>
            <value>
                <fullName>Basket</fullName>
            </value>
            <value>
                <fullName>Bale,compressed</fullName>
            </value>
            <value>
                <fullName>Bale,non-compressed</fullName>
            </value>
            <value>
                <fullName>Bar</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Can,rectangular</fullName>
            </value>
            <value>
                <fullName>Cage</fullName>
            </value>
            <value>
                <fullName>Chest</fullName>
            </value>
            <value>
                <fullName>Cask</fullName>
            </value>
            <value>
                <fullName>Coil</fullName>
            </value>
            <value>
                <fullName>Container</fullName>
            </value>
            <value>
                <fullName>Carboy,non-protected</fullName>
            </value>
            <value>
                <fullName>Carboy,protected</fullName>
            </value>
            <value>
                <fullName>Crate</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Carton</fullName>
            </value>
            <value>
                <fullName>Can,cylindrical</fullName>
            </value>
            <value>
                <fullName>Cylinder</fullName>
            </value>
            <value>
                <fullName>DemiJohn,non-protected</fullName>
            </value>
            <value>
                <fullName>DemiJohn, protected</fullName>
            </value>
            <value>
                <fullName>Drum</fullName>
            </value>
            <value>
                <fullName>Fibre Drum</fullName>
            </value>
            <value>
                <fullName>Flask</fullName>
            </value>
            <value>
                <fullName>Frame</fullName>
            </value>
            <value>
                <fullName>Flexible Container</fullName>
            </value>
            <value>
                <fullName>HEAD</fullName>
            </value>
            <value>
                <fullName>Hogeshead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>