objects/Vesselschedule__c/fields/CARRIER_AIRLINER_CODE__c.field-meta.xml
<CustomField>
    <fullName>CARRIER_AIRLINER_CODE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CARRIER/AIRLINER CODE</label>
    <referenceTo>clofor_com_cfs__Carrier_Code__c</referenceTo>
    <relationshipLabel>Vessel schedules</relationshipLabel>
    <relationshipName>Vessel_schedules</relationshipName>
    <type>Lookup</type>
</CustomField>