objects/Vesselschedule__c/fields/CFS_cut_off__c.field-meta.xml
<CustomField>
    <fullName>CFS_cut_off__c</fullName>
    <label>CFS CUT OFF DATE</label>
    <type>Date</type>
</CustomField>