objects/Vesselschedule__c/fields/CFS_cut_off_from__c.field-meta.xml
<CustomField>
    <fullName>CFS_cut_off_from__c</fullName>
    <label>CFS cut off from</label>
    <type>Date</type>
</CustomField>