objects/Vesselschedule__c/fields/CFS_Cut_Off_Time__c.field-meta.xml
<CustomField>
    <fullName>CFS_Cut_Off_Time__c</fullName>
    <label>CFS Cut Off Time</label>
    <type>Time</type>
</CustomField>