objects/Vesselschedule__c/fields/CFS_cut_off_to__c.field-meta.xml
<CustomField>
    <fullName>CFS_cut_off_to__c</fullName>
    <label>CFS cut off to</label>
    <type>Date</type>
</CustomField>