objects/Vesselschedule__c/fields/CLOSINGTIME__c.field-meta.xml
<CustomField>
    <fullName>CLOSINGTIME__c</fullName>
    <label>CLOSING  TIME</label>
    <type>DateTime</type>
</CustomField>