objects/Vesselschedule__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country of Origin</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Vessel schedules (Country of Origin)</relationshipLabel>
    <relationshipName>Vessel_schedules3</relationshipName>
    <type>Lookup</type>
</CustomField>