objects/Vesselschedule__c/fields/Country_of_Destination__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country of Destination</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Vessel schedules (Country of Destination)</relationshipLabel>
    <relationshipName>Vessel_schedules4</relationshipName>
    <type>Lookup</type>
</CustomField>