objects/Vesselschedule__c/fields/Country_of_POD__c.field-meta.xml
<CustomField>
    <fullName>Country_of_POD__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Country of POD</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Vessel schedules (Country of POD)</relationshipLabel>
    <relationshipName>Vessel_schedules1</relationshipName>
    <type>Lookup</type>
</CustomField>