objects/Vesselschedule__c/fields/Country_of_POL__c.field-meta.xml
<CustomField>
    <fullName>Country_of_POL__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Country of POL</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>&apos;Air&apos;</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>&apos;Consolidation&apos;</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>&apos;FCL&apos;</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Vessel schedules</relationshipLabel>
    <relationshipName>Vessel_schedules</relationshipName>
    <type>Lookup</type>
</CustomField>