objects/Vesselschedule__c/fields/Country_of_Transit__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Transit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country of Transit</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Vessel schedules (Country of Transit)</relationshipLabel>
    <relationshipName>Vessel_schedules2</relationshipName>
    <type>Lookup</type>
</CustomField>