objects/Vesselschedule__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vessel schedules (Customer)</relationshipLabel>
    <relationshipName>Vessel_schedules1</relationshipName>
    <type>Lookup</type>
</CustomField>