objects/Vesselschedule__c/fields/Cut_Off_Time__c.field-meta.xml
<CustomField>
    <fullName>Cut_Off_Time__c</fullName>
    <label>Cut Off Time</label>
    <type>Time</type>
</CustomField>