objects/Vesselschedule__c/fields/Days_of_Operation__c.field-meta.xml
<CustomField>
    <fullName>Days_of_Operation__c</fullName>
    <label>Days of Operation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>