objects/Vesselschedule__c/fields/Delay_Early_ETD__c.field-meta.xml
<CustomField>
    <fullName>Delay_Early_ETD__c</fullName>
    <label>Delay/Early ETD</label>
    <type>Date</type>
</CustomField>