objects/Vesselschedule__c/fields/Depart__c.field-meta.xml
<CustomField>
    <fullName>Depart__c</fullName>
    <label>Depart</label>
    <type>Time</type>
</CustomField>