objects/Vesselschedule__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>clofor_com_cfs__Port__c.Country__c</field>
            <operation>equals</operation>
            <valueField>$Source.Country_of_Destination__c</valueField>
        </filterItems>
        <filterItems>
            <field>clofor_com_cfs__Port__c.clofor_com_cfs__Port_Type__c</field>
            <operation>contains</operation>
            <value>AIR</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__Port__c</referenceTo>
    <relationshipLabel>Vessel schedules (Destination)</relationshipLabel>
    <relationshipName>Vessel_schedules3</relationshipName>
    <type>Lookup</type>
</CustomField>