objects/Vesselschedule__c/fields/Est_Cargo__c.field-meta.xml
<CustomField>
    <fullName>Est_Cargo__c</fullName>
    <label>Est. Cargo</label>
    <length>18</length>
    <type>Text</type>
</CustomField>