objects/Vesselschedule__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transit Port</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>clofor_com_cfs__Port__c.Country__c</field>
            <operation>equals</operation>
            <valueField>$Source.Country_of_Transit__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__Port__c</referenceTo>
    <relationshipLabel>Vessel schedules (Transit Port)</relationshipLabel>
    <relationshipName>Vessel_schedules2</relationshipName>
    <type>Lookup</type>
</CustomField>