objects/Vesselschedule__c/fields/Flight_No__c.field-meta.xml
<CustomField>
    <fullName>Flight_No__c</fullName>
    <label>Flight No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>