objects/Vesselschedule__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <length>30</length>
    <type>Text</type>
</CustomField>