objects/Vesselschedule__c/fields/INV_PKL__c.field-meta.xml
<CustomField>
    <fullName>INV_PKL__c</fullName>
    <label>INV &amp; PKL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>