objects/Vesselschedule__c/fields/Loading_location__c.field-meta.xml
<CustomField>
    <fullName>Loading_location__c</fullName>
    <label>Loading location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>