objects/Vesselschedule__c/fields/Local_Charge__c.field-meta.xml
<CustomField>
    <fullName>Local_Charge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local Charge</label>
    <referenceTo>LocalCharge__c</referenceTo>
    <relationshipLabel>Vessel schedules</relationshipLabel>
    <relationshipName>Vessel_schedules</relationshipName>
    <type>Lookup</type>
</CustomField>