objects/Vesselschedule__c/fields/MasterConsol__c.field-meta.xml
<CustomField>
    <fullName>MasterConsol__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Name / Master Consol</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vessel schedules</relationshipLabel>
    <relationshipName>Vessel_schedules</relationshipName>
    <type>Lookup</type>
</CustomField>