objects/Vesselschedule__c/fields/Mother_Vessel__c.field-meta.xml
<CustomField>
    <fullName>Mother_Vessel__c</fullName>
    <label>Mother Vessel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>