objects/Vesselschedule__c/fields/Ocean_Freight_for_Guest_FCY__c.field-meta.xml
<CustomField>
    <fullName>Ocean_Freight_for_Guest_FCY__c</fullName>
    <label>Ocean Freight for Guest (FCY)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>