objects/Vesselschedule__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>clofor_com_cfs__Port__c.Country__c</field>
            <operation>equals</operation>
            <valueField>$Source.Country__c</valueField>
        </filterItems>
        <filterItems>
            <field>clofor_com_cfs__Port__c.clofor_com_cfs__Port_Type__c</field>
            <operation>contains</operation>
            <value>AIR</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__Port__c</referenceTo>
    <relationshipLabel>Vessel schedules (Origin)</relationshipLabel>
    <relationshipName>Vessel_schedules4</relationshipName>
    <type>Lookup</type>
</CustomField>