objects/Vesselschedule__c/fields/Original_ETD__c.field-meta.xml
<CustomField>
    <fullName>Original_ETD__c</fullName>
    <label>Original ETD</label>
    <type>Date</type>
</CustomField>