objects/Vesselschedule__c/fields/PIC_of_Customer__c.field-meta.xml
<CustomField>
    <fullName>PIC_of_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIC of Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vessel schedules</relationshipLabel>
    <relationshipName>Vessel_schedules</relationshipName>
    <type>Lookup</type>
</CustomField>