objects/Vesselschedule__c/fields/POD__c.field-meta.xml
<CustomField>
    <fullName>POD__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>POD</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>clofor_com_cfs__Port__c.Country__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Country_of_POD__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__Port__c</referenceTo>
    <relationshipLabel>Vessel schedules (POD)</relationshipLabel>
    <relationshipName>Vessel_schedules1</relationshipName>
    <type>Lookup</type>
</CustomField>