objects/Vesselschedule__c/fields/Price_after_Discount_Local_at_Origin__c.field-meta.xml
<CustomField>
    <fullName>Price_after_Discount_Local_at_Origin__c</fullName>
    <formula>(1-Discount_Rate__c )* Local_Charge__r.Total_Amount_of_Price_Local_in_Origin__c</formula>
    <label>Price after Discount (Local) at Origin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>