objects/Vesselschedule__c/fields/Promotion_Sale_Off__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Sale_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promotion / Sale Off</label>
    <type>Checkbox</type>
</CustomField>