objects/Vesselschedule__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <label>Remark</label>
    <length>50</length>
    <type>Text</type>
</CustomField>