objects/Vesselschedule__c/fields/Sailing_day__c.field-meta.xml
<CustomField>
    <fullName>Sailing_day__c</fullName>
    <label>Sailing day</label>
    <type>DateTime</type>
</CustomField>