objects/Vesselschedule__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <length>50</length>
    <type>Text</type>
</CustomField>