objects/Vesselschedule__c/fields/Shipment_type__c.field-meta.xml
<CustomField>
    <fullName>Shipment_type__c</fullName>
    <label>Shipment type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Import</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>