objects/Vesselschedule__c/fields/Shipping_mode__c.field-meta.xml
<CustomField>
    <fullName>Shipping_mode__c</fullName>
    <label>Shipping mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>By Sea</fullName>
            </value>
            <value>
                <fullName>By Air</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>