objects/Vesselschedule__c/fields/SI_Amendment__c.field-meta.xml
<CustomField>
    <fullName>SI_Amendment__c</fullName>
    <label>SI Amendment</label>
    <type>Date</type>
</CustomField>