objects/Vesselschedule__c/fields/SI_cut_off__c.field-meta.xml
<CustomField>
    <fullName>SI_cut_off__c</fullName>
    <label>SI Cut Off Date</label>
    <type>Date</type>
</CustomField>