objects/Vesselschedule__c/fields/SI_cut_off_from__c.field-meta.xml
<CustomField>
    <fullName>SI_cut_off_from__c</fullName>
    <label>SI cut off from</label>
    <type>Date</type>
</CustomField>