objects/Vesselschedule__c/fields/SI_Cut_Off_Time__c.field-meta.xml
<CustomField>
    <fullName>SI_Cut_Off_Time__c</fullName>
    <label>SI Cut Off Time</label>
    <type>Time</type>
</CustomField>