objects/Vesselschedule__c/fields/SI_cut_off_to__c.field-meta.xml
<CustomField>
    <fullName>SI_cut_off_to__c</fullName>
    <label>SI cut off to</label>
    <type>Date</type>
</CustomField>