objects/Vesselschedule__c/fields/Special_Vessel__c.field-meta.xml
<CustomField>
    <fullName>Special_Vessel__c</fullName>
    <label>Special Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Guaranteed</fullName>
            </value>
            <value>
                <fullName>Sale Off</fullName>
            </value>
            <value>
                <fullName>Last minute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>