objects/Vesselschedule__c/fields/Stuffing_place__c.field-meta.xml
<CustomField>
    <fullName>Stuffing_place__c</fullName>
    <label>Stuffing place</label>
    <length>50</length>
    <type>Text</type>
</CustomField>