objects/Vesselschedule__c/fields/Total_Amount_of_Vessel_Schedule_FCY__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_Vessel_Schedule_FCY__c</fullName>
    <formula>Local_Charge__r.Total_Amount_of_Price_FCY_in_Des__c + Local_Charge__r.Total_Amount_of_Price_FCY_in_Origin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Vessel Schedule (FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>