objects/Vesselschedule__c/fields/Transit__c.field-meta.xml
<CustomField>
    <fullName>Transit__c</fullName>
    <label>Transit</label>
    <length>18</length>
    <type>Text</type>
</CustomField>