objects/Vesselschedule__c/fields/TRANSITDAYS__c.field-meta.xml
<CustomField>
    <fullName>TRANSITDAYS__c</fullName>
    <label>TRANSIT DAYS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>