objects/Vesselschedule__c/fields/Type_of_Vessel__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Vessel__c</fullName>
    <label>Type of Vessel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEA</fullName>
            </value>
            <value>
                <fullName>AIR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>