objects/Vesselschedule__c/fields/VESSEL__c.field-meta.xml
<CustomField>
    <fullName>VESSEL__c</fullName>
    <label>VESSEL</label>
    <type>TextArea</type>
</CustomField>