objects/Vesselschedule__c/fields/VOY__c.field-meta.xml
<CustomField>
    <fullName>VOY__c</fullName>
    <label>VOY</label>
    <type>TextArea</type>
</CustomField>