objects/Vesselschedule__c/fields/Week_day_of_SI_Cut_Off__c.field-meta.xml
<CustomField>
    <fullName>Week_day_of_SI_Cut_Off__c</fullName>
    <label>Week day of SI Cut Off</label>
    <length>18</length>
    <type>Text</type>
</CustomField>