objects/Vesselschedule__c/fields/Weekday_of_ETD__c.field-meta.xml
<CustomField>
    <fullName>Weekday_of_ETD__c</fullName>
    <label>Weekday of ETD</label>
    <length>18</length>
    <type>Text</type>
</CustomField>