objects/Vesselschedule__c/recordTypes/Consolidation.recordType-meta.xml
<RecordType>
    <fullName>Consolidation</fullName>
    <active>true</active>
    <label>Consolidation</label>
</RecordType>