objects/Vesselschedule__c/recordTypes/FCL.recordType-meta.xml
<RecordType>
    <fullName>FCL</fullName>
    <active>true</active>
    <label>FCL</label>
</RecordType>