objects/Vesselschedule__c/listViews/Air_Vessel_Schedule.listView-meta.xml
<ListView>
    <fullName>Air_Vessel_Schedule</fullName>
    <columns>NAME</columns>
    <columns>Air_Supplier__c</columns>
    <columns>Country__c</columns>
    <columns>Origin__c</columns>
    <columns>Country_of_Destination__c</columns>
    <columns>Destination__c</columns>
    <columns>Type__c</columns>
    <columns>ETD__c</columns>
    <columns>ETA__c</columns>
    <columns>Flight_No__c</columns>
    <columns>Depart__c</columns>
    <columns>Arrive__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CARRIER_AIRLINER_CODE__c</columns>
    <columns>Frequency__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Vesselschedule__c.Air</value>
    </filters>
    <label>Air Schedule</label>
</ListView>