objects/Vesselschedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MasterConsol__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Deactivate__c</columns>
    <columns>Special_Vessel__c</columns>
    <columns>Country_of_POL__c</columns>
    <columns>POL__c</columns>
    <columns>Country_of_POD__c</columns>
    <columns>POD__c</columns>
    <columns>ETD__c</columns>
    <columns>ETA__c</columns>
    <columns>Local_Charge__c</columns>
    <columns>CFS_cut_off__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>