objects/Vesselschedule__c/listViews/Consolidation_Vessel_Schedule.listView-meta.xml
<ListView>
    <fullName>Consolidation_Vessel_Schedule</fullName>
    <columns>NAME</columns>
    <columns>Deactivate__c</columns>
    <columns>MasterConsol__c</columns>
    <columns>ETD__c</columns>
    <columns>ETA__c</columns>
    <columns>Country_of_POL__c</columns>
    <columns>POL__c</columns>
    <columns>Country_of_POD__c</columns>
    <columns>POD__c</columns>
    <columns>Type__c</columns>
    <columns>Note__c</columns>
    <columns>Ocean_Freight_FCY__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Vesselschedule__c.Consolidation</value>
    </filters>
    <label>Consolidation Vessel Schedule</label>
</ListView>