objects/Vesselschedule__c/listViews/FCL_Vessel_Schedule.listView-meta.xml
<ListView>
    <fullName>FCL_Vessel_Schedule</fullName>
    <columns>NAME</columns>
    <columns>MasterConsol__c</columns>
    <columns>Country_of_POL__c</columns>
    <columns>POL__c</columns>
    <columns>Country_of_POD__c</columns>
    <columns>POD__c</columns>
    <columns>Type__c</columns>
    <columns>SI_cut_off__c</columns>
    <columns>SI_Cut_Off_Time__c</columns>
    <columns>CLOSINGTIME__c</columns>
    <columns>VESSEL__c</columns>
    <columns>VOY__c</columns>
    <columns>CARRIER_AIRLINER_CODE__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Vesselschedule__c.FCL</value>
    </filters>
    <label>FCL Vessel Schedule</label>
</ListView>